# chatgpt-schema

./: .gitignore  README.md  chat_analysis.py  examples.md  parse_and_validate.py  pyproject.toml  util.py
model/: assistant.py  config.py  contentref.py  conversation.py  system.py  tool.py  user.py
scripts/: analyze_conversation.py  analyze_conversations.py  analyze_messages.py  chat_analysis.py  clean.py  extract_rows.py  parse_and_validate.py  parse_stream.py  parse_validate_clean.py  shorten_uuids.py  sort_mapping.py
