[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "scripts"]

[project]
name = "chatgpt-schema"
version = "0.1.0"
description = "Pydantic models to understand the data structure of ChatGPT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "jsonpointer>=3.0.0",
    "openai>=1.82.0",
    "polars>=1.30.0",
    "pydantic>=2.11.5",
    "tiktoken>=0.9.0",
    "typejson>=1.0.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
reportUnusedImport = "error"
